# SharpRay

./: .gitignore  README.md
HDRViewer/: Form1.Designer.cs  Form1.cs  HDRViewer.csproj  HDRViewer_qt.pro  HistogramaDesenat.cs  Program.cs  RGBHistogram.Designer.cs  RGBHistogram.cs  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rgbhistogram.cpp
HDRViewer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
HDRViewer_qt/: HDRViewer_qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  rgbhistogram.h
SharpRay/: CMakeLists.txt  Doxyfile  SharpRay.sln  SharpRay.vcxproj  SharpRay.vcxproj.filters  main.cpp  sharpRay.sublime-workspace
SharpRay/Camera/: camera.cpp  camera.h  pinhole.cpp
SharpRay/Core/: Color.h  color.cpp  film.cpp  film.h  fmath.h  ray.cpp  ray.h  shader.cpp  shader.h  world.cpp  world.h
SharpRay/Entity/: Plane.h  entity.h  sphere.cpp  sphere.h
SharpRay/Light/: Light.h  spotLight.cpp  spotLight.h
SharpRay/Physical/: GlossySpecular.cpp  GlossySpecular.h  Material.cpp  Material.h  PerfectSpecular.cpp  PerfectSpecular.h
SharpRay/Sampler/: Sampler.cpp  Sampler.h
SharpRay/exec/: main.cpp  unittest_triangle.cpp
SharpRay/manager/: CMakeLists.txt  configmgr.cpp  configmgr.h  meshReader.cpp  meshReader.h  stdcompact.cpp  stdcompact.h  texturereader.cpp  texturereader.h
SharpRay/render/: CMakeLists.txt
SharpRay/render/Camera/: camera.cpp  camera.h  pinhole.cpp  pinhole.h
SharpRay/render/Core/: color.cpp  film.cpp  film.h  fmath.h  ray.cpp  ray.h  shader.cpp  shader.h  world.cpp  world.h
SharpRay/render/Entity/: Plane.cpp  Plane.h  entity.h  meshtriangle.cpp  meshtriangle.h  smoothmeshtriangle.cpp  smoothmeshtriangle.h  sphere.cpp  sphere.h
SharpRay/render/Light/: arealight.h  balllight.h
SharpRay/render/Physical/: Material.cpp  Material.h  mirror.cpp
SharpRay/render/Physical/BSDF/: GlossySpecular.h  lambertian.cpp  lambertian.h
SharpRay/render/Texture/: texture.cpp  texture.h
SharpRay/render/Util/: config.h  mesh.cpp  mesh.h
SharpRay/src/: main.cpp
SharpRay/src/Camera/: camera.cpp  camera.h  pinhole.cpp
SharpRay/src/Core/: BaseDS.h  Color.h  SRType.h  color.cpp  config.h  film.cpp  film.h  fmath.h  ray.cpp  ray.h  shader.cpp  shader.h  world.cpp  world.h
SharpRay/src/Entity/: Plane.cpp  Plane.h  entity.h  sphere.cpp  sphere.h
SharpRay/src/Light/: Light.h  arealight.cpp  arealight.h  balllight.cpp  balllight.h  spotLight.cpp  spotLight.h
SharpRay/src/Physical/: BSDF.h  Material.cpp  Material.h  PerfectSpecular.cpp  mirror.cpp  mirror.h
SharpRay/src/Physical/BSDF/: GlossySpecular.cpp  GlossySpecular.h  PerfectSpecular.cpp  PerfectSpecular.h  bsdf.h  lambertian.cpp  lambertian.h
SharpRay/src/Sampler/: Sampler.cpp  Sampler.h  nRook.cpp  nRook.h
SharpRay/src/Texture/: texture.cpp  texture.h
SharpRay/src/Util/: config.cpp  mesh.h
SharpRay/test/: main.cpp  unittest_faceReader.cpp  unittest_obj.cpp  unittest_triangle.cpp
SharpRay/test/unittestSampler/: main.cpp  output.py
UnitTestRayTracing/: UnitTestRayTracing.vcxproj  stdafx.cpp  unittest1.cpp
unittestSampler/: main.cpp  makefile  output.py
